# cmd/main/docs/swagger.json
@@ -36,9 +36,15 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -71,9 +77,15 @@
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -110,15 +122,21 @@
                         "description": "OK"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -143,9 +161,15 @@
                         "description": "OK"
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -343,9 +367,15 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -378,9 +408,15 @@
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -420,15 +456,21 @@
                         "description": "OK"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -453,9 +495,15 @@
                         "description": "OK"
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -480,6 +528,12 @@
                                 "$ref": "#/definitions/gotus_internal_model_book.BookInstance"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -502,6 +556,12 @@
                             "items": {
                                 "$ref": "#/definitions/gotus_internal_model_book.Book"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_book.ErrorResponse"
                         }
                     }
                 }
@@ -536,9 +596,15 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     }
                 }
@@ -571,9 +637,15 @@
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     }
                 }
@@ -613,15 +685,21 @@
                         "description": "OK"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     }
                 }
@@ -646,9 +724,15 @@
                         "description": "OK"
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     }
                 }
@@ -672,6 +756,12 @@
                             "items": {
                                 "$ref": "#/definitions/gotus_internal_model_reservation.Reservation"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_reservation.ErrorResponse"
                         }
                     }
                 }
@@ -706,9 +796,15 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
                         }
                     }
                 }
@@ -740,10 +836,22 @@
                             "$ref": "#/definitions/gotus_internal_model_user.User"
                         }
                     },
-                    "404": {
-                        "description": "not found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
                         }
                     }
                 }
@@ -783,15 +891,21 @@
                         "description": "OK"
                     },
                     "400": {
-                        "description": "invalid request",
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
                         }
                     }
                 }
@@ -816,9 +930,15 @@
                         "description": "OK"
                     },
                     "404": {
-                        "description": "not found",
+                        "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
                         }
                     }
                 }
@@ -843,6 +963,12 @@
                                 "$ref": "#/definitions/gotus_internal_model_user.User"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api_user.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -852,13 +978,16 @@
         "gotus_internal_model_book.Book": {
             "type": "object",
             "properties": {
-                "author": {
+                "Author": {
                     "type": "string"
                 },
-                "title": {
+                "Isbn": {
                     "type": "string"
                 },
-                "year": {
+                "Title": {
+                    "type": "string"
+                },
+                "Year": {
                     "type": "integer"
                 }
             }
@@ -866,27 +995,33 @@
         "gotus_internal_model_book.BookInstance": {
             "type": "object",
             "properties": {
-                "isbn": {
+                "ISBN": {
                     "type": "string"
+                },
+                "Id": {
+                    "type": "integer"
                 }
             }
         },
         "gotus_internal_model_reservation.Reservation": {
             "type": "object",
             "properties": {
-                "bookInstanceID": {
+                "BookInstanceID": {
                     "type": "integer"
                 },
-                "endDate": {
+                "EndDate": {
                     "type": "string"
                 },
-                "reservationStatusID": {
+                "Id": {
                     "type": "integer"
                 },
-                "startDate": {
+                "ReservationStatusID": {
+                    "type": "integer"
+                },
+                "StartDate": {
                     "type": "string"
                 },
-                "userID": {
+                "UserID": {
                     "type": "integer"
                 }
             }
@@ -894,10 +1029,13 @@
         "gotus_internal_model_user.User": {
             "type": "object",
             "properties": {
-                "email": {
+                "Email": {
                     "type": "string"
                 },
-                "name": {
+                "Id": {
+                    "type": "integer"
+                },
+                "Name": {
                     "type": "string"
                 }
             }
@@ -927,6 +1065,14 @@
                 },
                 "year": {
                     "type": "integer"
+                }
+            }
+        },
+        "internal_api_book.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -1005,6 +1151,14 @@
                 }
             }
         },
+        "internal_api_reservation.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "internal_api_reservation.UpdateReservationRequest": {
             "type": "object",
             "properties": {
@@ -1035,6 +1189,14 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_api_user.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
